--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,7 +8,9 @@ edition = "2018"
 
 [dependencies]
 quickcheck = "*"
+proptest = "*"
 
 [dev-dependencies]
 quickcheck = "*"
 quickcheck_macros = "*"
+proptest = "*"
